Slight cleanup of TrackService using utility classes