@@ -2,6 +2,7 @@ package com.example.musicbooru.service;
 
 import com.example.musicbooru.model.Track;
 import com.example.musicbooru.repository.TrackRepository;
+import org.apache.tika.exception.TikaException;
 import org.jaudiotagger.audio.AudioFile;
 import org.jaudiotagger.audio.AudioFileIO;
 import org.jaudiotagger.audio.exceptions.CannotReadException;
@@ -13,9 +14,6 @@ import org.jaudiotagger.tag.TagException;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.awt.image.BufferedImage;
-import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -25,12 +23,15 @@ import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 
-import org.apache.commons.io.FilenameUtils;
-
-import javax.imageio.ImageIO;
+import static com.example.musicbooru.util.FileTypeDetector.detectFileExtension;
+import static com.example.musicbooru.util.FileTypeDetector.detectMediaType;
+import static com.example.musicbooru.util.MetadataExtractor.extractArtwork;
 
 @Service
 public class TrackService {
+
+    public static final String library = "./library/";
+    public static final String artwork = "./artwork/";
 
     private final TrackRepository trackRepository;
 
@@ -38,56 +39,57 @@ public class TrackService {
         this.trackRepository = trackRepository;
     }
 
-    public void uploadTrack(MultipartFile file) throws IOException, CannotReadException, TagException, InvalidAudioFrameException, ReadOnlyFileException {
-        // Create library directory if it does not exist already
-        Path libraryDir = Paths.get("./tracks/covers");
-        Files.createDirectories(libraryDir);
-
-        // Save as temporary file for metadata extraction
-        String originalFilename = file.getOriginalFilename(); // The file extension needs to be preserved for Jaudiotagger to work
-        if(originalFilename == null) {
-            throw new IllegalArgumentException("File must have a name");
+    public void uploadTrack(MultipartFile file) {
+        // Create directories for the audio files and accompanying artwork, if the directories don't exist
+        try {
+            Files.createDirectories(Path.of(library));
+            Files.createDirectories(Path.of(artwork));
+        } catch(IOException e) {
+            // TODO Add proper logging
+            System.err.println(e.getMessage());
+            e.printStackTrace();
         }
 
-        // TODO Implement extension derivation from content type
-        String extension = "." + FilenameUtils.getExtension(originalFilename);
-        Path tmpFile = Files.createTempFile(null, extension);
-        Files.copy(file.getInputStream(), tmpFile, StandardCopyOption.REPLACE_EXISTING);
+        try {
+            // Save as temporary file for metadata extraction
+            String fileExtension =  detectFileExtension(file);
+            Path tmp = Files.createTempFile(null, fileExtension);
+            Files.copy(file.getInputStream(), tmp, StandardCopyOption.REPLACE_EXISTING);
 
-        // Derive proper file name from metadata
-        AudioFile audioFile = AudioFileIO.read(tmpFile.toFile());
-        Tag tag = audioFile.getTag();
-        String derivedFileName = tag.getFirst(FieldKey.ARTIST) + " - " + tag.getFirst(FieldKey.TITLE) + extension;
+            // Use the metadata to construct a file name
+            AudioFile audioFile = AudioFileIO.read(tmp.toFile());
+            Tag tag = audioFile.getTag();
+            String fileName = tag.getFirst(FieldKey.ARTIST) + " - " + tag.getFirst(FieldKey.TITLE) + fileExtension;
 
-        // Move the file to the library directory
-        Files.move(tmpFile, Paths.get("./tracks", derivedFileName), StandardCopyOption.REPLACE_EXISTING);
+            // Move file to the library directory
+            Files.move(tmp, Paths.get(library + fileName), StandardCopyOption.REPLACE_EXISTING);
 
-        Track newTrack = Track.builder()
-                .fileName(derivedFileName)
-                .title(tag.getFirst(FieldKey.TITLE))
-                .album(tag.getFirst(FieldKey.ALBUM))
-                .artist(tag.getFirst(FieldKey.ARTIST))
-                .genre(tag.getFirst(FieldKey.GENRE))
-                .year(tag.getFirst(FieldKey.YEAR))
-                .sampleRate(audioFile.getAudioHeader().getSampleRate())
-                .build();
+            Track track = Track.builder()
+                    .title(tag.getFirst(FieldKey.TITLE))
+                    .artist(tag.getFirst(FieldKey.ARTIST))
+                    .album(tag.getFirst(FieldKey.ALBUM))
+                    .genre(tag.getFirst(FieldKey.GENRE))
+                    .year(tag.getFirst(FieldKey.YEAR))
+                    .sampleRate(audioFile.getAudioHeader().getSampleRate())
+                    .mediaType(detectMediaType(file))
+                    .fileName(fileName)
+                    .build();
 
-        trackRepository.save(newTrack);
+            trackRepository.save(track);
 
-        // Extract cover art and save it in `./tracks/cover/` using the song's ID as the file name
-        byte[] imageData = tag.getFirstArtwork().getBinaryData(); // NullPointer
-        if(imageData != null) {
-            ByteArrayInputStream bais = new ByteArrayInputStream(imageData);
-            BufferedImage image = ImageIO.read(bais);
-            File outputFile = new File("./tracks/covers/" + newTrack.getId() + ".jpg");
-            ImageIO.write(image, "jpg", outputFile);
+            extractArtwork(tag, track.getId());
+
+        } catch(TikaException | IOException | CannotReadException | TagException | ReadOnlyFileException | InvalidAudioFrameException e) {
+            // TODO Add proper logging
+            System.err.println(e.getMessage());
+            e.printStackTrace();
         }
     }
 
     public void deleteTrack(String id) throws NoSuchElementException, IOException {
         Track toBeDeleted = trackRepository.findById(id).orElseThrow();
-        Path path = Paths.get("./tracks/", toBeDeleted.getFileName());
-        Path coverPath = Paths.get("./tracks/covers/", toBeDeleted.getId() + ".jpg");
+        Path path = Paths.get(library, toBeDeleted.getFileName());
+        Path coverPath = Paths.get(artwork, toBeDeleted.getId() + ".jpg");
         Files.delete(path);
         Files.delete(coverPath);
         trackRepository.deleteById(id);
